add_subdirectory(Common)
add_subdirectory(RHI)
add_subdirectory(Mirror)
add_subdirectory(Render)
add_subdirectory(Runtime)
add_subdirectory(Rendering)
add_subdirectory(Launcher)

add_subdirectory(RHI-Dummy)
add_subdirectory(RHI-Vulkan)
if (${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
    add_subdirectory(RHI-DirectX12)
endif()
#if (${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
#    add_subdirectory(RHI-Metal)
#endif ()

if (${BUILD_EDITOR})
    add_subdirectory(AssetFactory)
endif ()
